--- a/home/css/index.less
+++ b/home/css/index.less
@@ -315,6 +315,7 @@ img,span,a,i,b,input,select,textarea{
      top: 0;
      width: 100%;
      height: 64px;
+     z-index: 100;
    }
   #nav{
     width: 100%;
@@ -493,7 +494,7 @@ img,span,a,i,b,input,select,textarea{
   }
   // 第六屏
   .section6{
-    height: 551px;
+    height: 561px;
     background: #fff;
     text-align: center;
     h2{
@@ -510,24 +511,500 @@ img,span,a,i,b,input,select,textarea{
       color: #666;
     }
     .box{
-      
+      height: 250px;
+      width:1200px;
+      margin: 0 auto;
+      padding-top: 40px;
+      text-align: center;
+      >div{
+        width: 224px;
+        height: 238px;
+        background-color: #ffffff;
+        border: solid 1px #ff0000;
+        float: left;
+        margin-right: 20px;
+        h3{
+          width: 204px;
+          margin: 0 auto;
+          line-height: 60px;
+          font-size: 20px;
+          color: #ff0000;
+          height: 60px;
+          border-bottom:1px dashed #bfbfbf;
+        }
+        p{
+          line-height: 25px;
+          width: 195px;
+          height:43px;
+          text-align: left;
+          margin: 0 auto;
+          font-size: 16px;
+          margin-top: 30px;
+        }
+        .btn{
+          padding-top: 36px;
+          a{
+            display: inline-block;
+            width: 159px;
+            height: 44px;
+            line-height: 44px;
+            color: #ff0000;
+            background-color: #ffffff;
+            border: solid 1px #ff0000;
+             font-size: 16px;
+            &:hover{
+              background: #ff0000;
+              color: #fff;
+            }
+          }
+        }
+      }
     }
   }
   // 第七屏
   .section7{
-    
+    height: 1020px;
+    background: #fff;
+    text-align: center;
+    h2{
+      width: 589px;
+      margin: 0 auto;
+      padding: 80px 0 20px 0;
+      border-bottom: 1px solid #222;
+      font-size: 50px;
+      span.r{
+        color: #fa0000;
+      }
+    }
+    p{
+      line-height: 52px;
+      height:43px;
+      font-size: 18px;
+    }
+    .box{
+      height: 690px;
+      padding-top: 53px;
+      >div{
+        float: left;
+      }
+      .left{
+        width: 632px;
+        height: 690px;
+      }
+      .right {
+        width: 512px;
+        height: 690px;
+        margin-left: 50px;
+        text-align: left;
+        .swiper{
+          height: 374px;
+          width: 100%;
+          
+          p{
+            height: 54px;
+            line-height: 54px;
+            background: #ff8610;
+            color: #fff;
+            font-size: 18px;
+          }
+          .swiper-container{
+           border: solid 2px #d2d2d2;
+           height: 320px;
+           width: 100%;
+           border-top: none;
+           .swiper-slide{
+             height: 40px;
+             line-height: 40px;
+             color: #01163c;
+             font-size: 18px;
+             
+           }
+          }
+        }
+        .gs{
+          h3{
+            color: #ffa914;
+            font-size: 20px;
+            padding: 20px 0 10px 0;
+            border-bottom: 1px solid #222;
+          }
+          p{
+            font-size: 18px;
+            line-height: 28px;
+            color: #666666;
+            height: 48px;
+            width: 503px;
+            margin-top: 10px;
+          }
+          .img{
+            margin-top: 20px;
+            height: 155px;
+            img{
+              width: 512px;
+              border: 0;
+            }
+          }
+        }
+      }
+    }
   }
    // 第八屏
   .section8{
-    
+    height: 722px;
+    background-color: #e3f6ff; 
+    text-align: center;
+    h2{
+      font-size: 50px;
+      line-height: 52px;
+      padding: 80px 0 20px 0;
+      border-bottom: 1px solid #222;
+      width: 788px;
+      margin: 0 auto;
+    }
+    p{
+      font-size: 18px;
+      line-height: 52px;
+      color: #666666;
+    }
+    .box{
+      height: 201px;
+      font-size: 0;
+      margin-top: 39px;
+      a{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+      }
+      >div{
+        display: inline-block;
+        font-size: 18px;
+        width: 200px;
+        height: 200px;
+      }
+      .bx1{
+        background: url(../img/b1.jpg) no-repeat;
+        &:hover{
+          background: url(../img/a1.jpg) no-repeat;
+        }
+      }
+      .bx2{
+         background: url(../img/b2.jpg) no-repeat;
+        &:hover{
+          background: url(../img/a2.jpg) no-repeat;
+        }
+      }
+      .bx3{
+         background: url(../img/b3.jpg) no-repeat;
+        &:hover{
+          background: url(../img/a3.jpg) no-repeat;
+        }
+      }
+      .bx4{
+         background: url(../img/b4.jpg) no-repeat;
+        &:hover{
+          background: url(../img/a4.jpg) no-repeat;
+        }
+      }
+      .bx5{
+         background: url(../img/b5.jpg) no-repeat;
+        &:hover{
+          background: url(../img/a5.jpg) no-repeat;
+        }
+      }
+      .bx6{
+         background: url(../img/b6.jpg) no-repeat;
+        &:hover{
+          background: url(../img/a6.jpg) no-repeat;
+        }
+      }
+    }
+    h4{
+      font-size: 22px;
+      padding: 67px 0 48px 0;
+      font-weight: 400;
+    }
+    .btn{
+      a{
+        display: inline-block;
+        width: 238px;
+        height: 72px;
+        background-color: #ff0000;
+        border-radius: 5px;
+        line-height: 72px;
+        font-size: 24px;
+        color: #fff;
+      }
+    }
   }
   // 第九屏
   .section9{
-    
+    height: 740px;
+    background: #fff;
+    text-align: center;
+    h2{
+      font-size: 50px;
+      padding: 80px 0 85px 0;
+    }
+    .box{
+      position: relative;
+      height: 304px;
+      font-size: 0;
+      >div{
+        float: left;
+        font-size: 16px;
+        width: 278px;
+        height: 302px;
+        background-color: #ffffff;
+        border: solid 1px #ff0000;
+        margin-right: 29px;
+        position: relative;
+        span.fix{
+          position: absolute;
+          width: 64px;
+          height:64px;
+          border: 1px solid red;
+          border-radius: 64px;
+          left: 50%;
+          top: -32px;
+          margin-left: -32px;
+          font-size: 30px;
+          color: red;
+          font-style: italic;
+          font-weight: 800;
+          background: #fff;
+          line-height: 60px;
+        }
+        h3{
+          font-size: 24px;
+          color: red;
+          padding-top: 60px;
+        }
+        p{
+          width: 181px;
+          height: 92px;
+          text-align: left;
+          color: #808080;
+          margin: 0 auto;
+          margin-top: 18px;
+          line-height: 23px;
+        }
+        p.a1{
+          width: 154px;
+        }
+        p.a2{
+          width: 181px;
+        }
+        p.a3{
+          width: 139px;
+        }
+        p.a4{
+          width: 149px;
+        }
+        .b{
+          padding-top: 30px;
+          a{
+            display: inline-block;
+            width: 172px;
+            height: 44px;
+            background-color: #ffffff;
+            border-radius: 5px;
+            border: solid 1px #ff0000;
+            line-height: 44px;
+            color: red;
+            &:hover{
+              background-color: red;
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+    .btn{
+      padding-top: 60px;
+      a{
+        display: inline-block;
+        width: 238px;
+        height: 72px;
+        background-color: #ff0000;
+        border-radius: 5px;
+        line-height: 72px;
+        color: #fff;
+        font-size: 24px;
+      }
+    }
   }
    // 第十屏
   .section10{
-    
+    height: 500px;
+    background: #fff;
+     text-align: center;
+    h2{
+      font-size: 50px;
+      width:774px;
+      padding: 10px 0 20px 0;
+      margin: 0 auto;
+      line-height: 52px;
+      border-bottom: 1px solid #222;
+    }
+    p.p{
+      font-size: 18px;
+      color: #666;
+      margin-top: 9px;
+    }
+    .box{
+      font-size: 0;
+      width: 660px;
+      text-align: center;
+      margin: 0 auto;
+      padding-top: 38px;
+      padding-bottom: 38px;
+      a{
+        display: inline-block;
+        width: 110px;
+        height: 36px;
+        line-height: 36px;
+        background-color: #04315b;
+        border-radius: 5px;
+        font-size: 16px;
+        color: #ffffff;
+        margin-right: 20px;
+        margin-top: 20px;
+      }
+    }
+    .box2{
+      p{
+        font-size: 16px;
+        color: red;
+      }
+      p.b2{
+        font-size: 18px;
+        margin-top: 19px;
+      }
+    }
+    p.p2{
+      margin-top: 39px;
+      font-size: 22px;
+    }
   }
     
+}
+
+.section11{
+  text-align: center;
+  height: 1091px;
+  background: #d3d1d1 url(../img/fg.png) no-repeat;
+  h2{
+    font-size: 50px;
+    padding: 90px 0 20px 0;
+    width: 930px;
+    margin: 0 auto;
+    border-bottom: 1px solid #222;
+  }
+  p.a1{
+    line-height: 26px;
+    font-size: 16px;
+    color: #222;
+  }
+  form{
+    width: 791px;
+    margin: 0 auto;
+    margin-top: 40px;
+    text-align: left;
+    font-size: 18px;
+    .f-box{
+      width: 791px;
+      height: 538px;
+      background: #fff;
+      opacity: 0.7;
+      padding-top: 60px;
+      padding-left: 72px;
+    }
+    h3{
+      margin-bottom: 18px;
+      font-size: 23px;
+    }
+    .item{
+      margin-bottom: 38px;
+      input{
+        display: inline-block;
+        width: 22px;
+        height:22px;
+      }
+      input,span{
+        vertical-align: middle;
+      }
+    }
+    .inp{
+      margin-top: 20px;
+      input{
+        display: inline-block;
+        width: 620px;
+        height: 44px;
+        background-color: #ffffff;
+        border-radius: 5px;
+        border: solid 1px #bfbfbf;
+        font-size: 18px;
+        padding-left: 10px;
+        line-height: 44px;
+      }
+    }
+    .btn{
+      text-align: center;
+      padding: 51px 0 45px 0;
+      button{
+        width: 238px;
+        height: 72px;
+        background-color: #ff0000;
+        border-radius: 5px;
+        color: #fff;
+        border: 0;
+        border: none;
+        font-size: 24px;
+        cursor: pointer;
+        outline:none;
+      }
+    }
+  }
+  p.f{
+    font-size: 22px;
+    color: #fb0000;
+  }
+}
+
+.footer{
+  .w{
+    height: 92px;
+    background: #fff;
+  }
+  .copyRight{
+    height: 309px;
+    background-color: #000e2b; 
+    .content{
+      margin: 0 auto;
+      width: 1200px;
+      height: 309px;
+      position: relative;
+      color: #fff;
+      img.er{
+        position: absolute;
+        right: 0;
+        top: 50px;
+      }
+      p.a{
+        line-height: 24px;
+        padding-top: 77px;
+        a{
+          color: #fff;
+          display: inline-block;
+          margin-right: 20px;
+          &:hover{
+            color: red;
+          }
+        }
+      }
+      p.copy{
+        line-height: 52px;
+      }
+    }
+  }
 }
