--- a/home/mobile/css/index.less
+++ b/home/mobile/css/index.less
@@ -1,5 +1,291 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  box-sizing: border-box;
+}
+body {
+  max-width: 7.5rem;
+  margin: 0 auto;
+  height: 300px;
+  line-height: 0px;
+}
+html {
+  font-size: 100px;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
 
+:focus {
+  outline: 0;
+}
 
-body{
+ins {
+  text-decoration: none;
+}
+del {
+  text-decoration: line-through;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+button {
+  border: 0;
+  border: none;
+}
+
+img {
+  display: inline-block;
+  border: 0;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+  color: #222;
+}
+.app {
+  margin: 0 auto;
+  width: 7.5rem;
+  background: #fff;
+}
+.setion1 {
+  height: 6.304rem;
+  .logo {
+    height: 1.05rem;
+    width: 100%;
+    img {
+      width: 100%;
+    }
+  }
+  .swiper-container{
+    height: 5.26rem;
+    .swiper-wrapper{
+      height: 100%;
+      .swiper-slide{
+        position: relative;
+        img{
+          width: 100%;
+        }
+        .m{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background: #000;
+          opacity: 0.37;
+        }
+        .box{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 10;
+          text-align: center;
+          color: #fff;
+        }
+      }
+      .slide1{
+        h2{
+          font-size: 0.5rem;
+          padding-top: 1.3rem;
+          padding-bottom: 0.34rem;
+          color: #fff;
+        }
+        p{
+          font-size: 0.4rem;
+          line-height: 0.4rem;
+          padding: 0.34rem 0 0.57rem 0;
+        }
+        .btn{
+          a{
+            display: inline-block;
+            font-size: 0.28rem;
+            width: 2.8rem;
+            height: 0.64rem;
+            line-height: 0.64rem;
+            background-color: #ff7a29;
+            border-radius: 0.05rem;
+            color: #fff;
+          }
+        }
+      }
+      .slide2{ 
+        .child-box{
+          width: 6.68rem;
+          height:4.10rem;
+          margin: 0 auto;
+          margin-top: 0.57rem;
+          background: #fff;
+          opacity: 0.7;
+          color: #222;
+          h2{
+            font-size: 0.66rem;
+            padding: 0.36rem 0 0.2rem 0;
+            border-bottom: 1px solid #222;
+            width: 6.44rem;
+            line-height: 0.66rem;
+            margin: 0 auto;
+            color: #2095e7;
+          }
+          p.a{
+            line-height: 0.4rem;
+            font-size: 0.36rem;
+            padding: 0.2rem 0;
+          }
+          p.b{
+            line-height: 0.3rem;
+            font-size: 0.20rem;
+          }
+          .btn{
+            margin-top: 0.45rem;
+            a{
+            display: inline-block;
+            font-size: 0.28rem;
+            width: 2.8rem;
+            height: 0.64rem;
+            line-height: 0.64rem;
+            background-color: #ff7a29;
+            border-radius: 0.05rem;
+            color: #fff;
+          }
+          }
+        }
+      }
+      .slide3{
+        h2{
+          font-size: 0.5rem;
+          padding-bottom: 0.34rem;
+          color: #fff;
+          text-shadow: 5px 5px 5px #f0a544;
+        }
+        p{
+          font-size: 0.4rem;
+          line-height: 0.4rem;
+          padding: 1.4rem 0 0.34rem 0;
+        }
+        .btn{
+          width: 3.15rem;
+          height: 0.76rem;
+          position: relative;
+          margin: 0 auto;
+          margin-top: 0.57rem;
+          img{
+            width: 100%;
+          }
+          a{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 3.15rem;
+            height: 0.76rem;
+            display:block;
+            font-size: 0.28rem;
+            color: #fff;
+            line-height: 0.70rem;
+          }
+        }
+      }
+    }
+  }
+}
+#nav{
+  position: relative;
+  height: 0.64rem;
+  background-color: #01163c;
+  text-align: left;
+  a{
+    color: #fff;
+    display: inline-block;
+    height: 100%;
+    line-height: 0.64rem;
+    font-size: 0.2rem;
+    &:hover{
+      background-color: #19275f;
+      color: #fffc20;
+    }
+    
+  }
   
 }
