--- a/home/css/index.less
+++ b/home/css/index.less
@@ -193,7 +193,7 @@ img,span,a,i,b,input,select,textarea{
           width: 524px;
           height:127px;
           margin: 0 auto;
-          background: url(../img/jx.png) no-repeat 50% 50%;
+          background: url(../img/jx.jpg) no-repeat 50% 50%;
           line-height: 127px;
           font-size: 60px;
           a{
@@ -206,7 +206,7 @@ img,span,a,i,b,input,select,textarea{
         }
       }
       .slide2{
-        background: url(../img/2.png) no-repeat;
+        background: url(../img/2.jpg) no-repeat;
         font-size: 50px;
         text-align: center;
         padding-top: 230px;
@@ -265,7 +265,8 @@ img,span,a,i,b,input,select,textarea{
         }
       }
       .slide3{
-        background: url(../img/3.png) no-repeat;
+        background: url(../img/3.jpg) no-repeat;
+        background-size: 100% 100%;
         position: relative;
         color: #fff;
         .box{
