--- a/home/mobile/css/index.less
+++ b/home/mobile/css/index.less
@@ -281,6 +281,8 @@ a {
     height: 100%;
     line-height: 0.64rem;
     font-size: 0.2rem;
+    margin: 0;
+    padding: 0;
     &:hover{
       background-color: #19275f;
       color: #fffc20;
@@ -288,4 +290,132 @@ a {
     
   }
   
+}
+.setion2{
+  height: 11.46rem;
+  background-color: #f7f7f7;
+  text-align: center;
+  h2{
+    width: 6.9rem;
+    font-size: 0.4rem;
+    line-height: 0.4rem;
+    padding: 0.69rem 0 0.2rem 0;
+    border-bottom: 1px solid #222;
+    margin: 0 auto;
+  }
+  p{
+    font-size: 0.24rem;
+    line-height: 0.38rem;
+  }
+  .box{
+    width: 6.9rem;
+    margin: 0 auto;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 0.38rem;
+    >div{
+      width: 3.3rem;
+      height: 4.16rem;
+      background-color: #ffffff;
+      margin-bottom: 0.3rem;
+      font-size: 0.24rem;
+      .span{
+        margin-top:0.3rem;
+        span{
+          font-size: 0.5rem;
+          line-height: 0.5rem;
+          font-weight: 800;
+          font-style: italic;
+          color: #886807;
+        }
+      }
+      h4{
+        font-size: 0.28rem;
+        color: #d54107;
+        line-height: 0.32rem;
+        margin-top: 0.23rem;
+      }
+      p{
+        font-size: 0.24rem;
+        color: #222;
+        line-height: 0.38rem;
+        width: 2.97rem;
+        height: 1.37rem;
+        text-align: left;
+        margin: 0 auto;
+        margin-top: 0.2rem;
+      }
+      .btn{
+        margin-top: 0.38rem;
+        a{
+          display: inline-block;
+          width: 2.65rem;
+          height: 0.56rem;
+          background-color: #ffffff;
+          border-radius: 0.03rem;
+          border: solid 0.01rem #fba746;
+          line-height: 0.55rem;
+          color: #fba746;
+          &:hover{
+            background-color: #fba746;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+.setion3{
+  text-align: center;
+  font-size: 0.22rem;
+  height: 14.65rem;
+  h2{
+    width: 6.9rem;
+    margin: 0 auto;
+    line-height: 0.52rem;
+    padding-top: 0.29rem;
+    padding-bottom: 0.1rem;
+    border-bottom: 1px solid #222;
+  }
+  p{
+    line-height: 0.38rem;
+    font-size: 0.24rem;
+    margin-top: 0.2rem;
+  }
+  .box{
+    width: 6.9rem;
+    margin: 0 auto;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 0.38rem;
+    >div{
+      width: 3.35rem;
+      height: 5.76rem;
+      background-color: #ffffff;
+      border: solid 0.01rem #0972d4;
+      margin-bottom: 0.2rem;
+      img{
+        width: ;
+      }
+      h4{
+        font-size: 0.28rem;
+        color: #ef0000;
+        line-height: 0.52rem;
+        margin-top: 0.18rem;
+      }
+      p{
+        text-align: left;
+        width: 3.05rem;
+        margin: 0 auto;
+        height: 2.79rem;
+        color: #7f7f7f;
+        line-height: 0.32rem;
+        margin-top: 0.19rem;
+      }
+    }
+  }
 }
