--- a/home/css/index.less
+++ b/home/css/index.less
@@ -172,9 +172,10 @@ img,span,a,i,b,input,select,textarea{
         z-index: 10;
       }
       .slide1{
-        background: url(../img/1.png) no-repeat;
+        background: url(../img/1.jpg) no-repeat;
         padding-top: 180px;
         position: relative;
+        background-size:100% 100%; 
         p{
           font-size: 78px;
           color: #ffd6a0;
@@ -193,7 +194,7 @@ img,span,a,i,b,input,select,textarea{
           width: 524px;
           height:127px;
           margin: 0 auto;
-          background: url(../img/jx.jpg) no-repeat 50% 50%;
+          background: url(../img/jx.png) no-repeat 50% 50%;
           line-height: 127px;
           font-size: 60px;
           a{
@@ -211,6 +212,7 @@ img,span,a,i,b,input,select,textarea{
         text-align: center;
         padding-top: 230px;
         position: relative;
+        background-size:100% 100%; 
         .m{
           width: 100%;
           height: 100%;
